fix input date icon and placeholder on mobile

--- a/assets/css/components/input.css
+++ b/assets/css/components/input.css
@@ -11,13 +11,12 @@ input{
     background: inherit;
     color: inherit;
     caret-color: var(--secondary);
-    width: 100%;
+    width: max-content;
     box-sizing: border-box;
 }
-input::-webkit-inner-spin-button{
+input[type="date"]::-webkit-inner-spin-button{
     display: none;
-    appearance: none;
-    -webkit-appearance: none;
+    opacity: 0;
 }
 input:hover, textarea:hover, select:hover{
     background: var(--surface-v);
@@ -145,6 +144,7 @@ input[type="range"]{
 input[type="color"]{
     height: 2.5rem;
     padding: .25rem .5rem;
+    width: 20%;
 }
 
 .file__container{
